# kodama

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: camera-alpha.yml  ci.yml  cli-alpha.yml  desktop-alpha.yml  release-firmware.yml  release-server.yml  release.yml  rust.yml
apps/kodama-app/: package.json
apps/kodama-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/kodama-app/src-tauri/src/: lib.rs
apps/kodama-camera/: Cargo.toml
apps/kodama-camera/src/: main.rs
apps/kodama-cli/: Cargo.toml
apps/kodama-cli/src/: app.rs  main.rs  ui.rs
apps/kodama-client/: Cargo.toml
apps/kodama-client/src/: main.rs
apps/kodama-desktop/: Cargo.toml  index.html  package.json  tsconfig.json  vite.config.ts
apps/kodama-desktop/src/: App.svelte  app.d.ts  app.html
apps/kodama-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/kodama-desktop/src-tauri/capabilities/: default.json
apps/kodama-desktop/src-tauri/src/: commands.rs  events.rs  fmp4_ffmpeg.rs  lib.rs  main.rs  state.rs
apps/kodama-desktop/src/lib/: types.ts
apps/kodama-desktop/src/lib/components/: AudioMeter.svelte  AudioPlayer.svelte  TelemetryPanel.svelte  VideoPlayer.svelte
apps/kodama-desktop/src/pages/: Dashboard.svelte  Settings.svelte
apps/kodama-desktop/src/routes/: +layout.ts  +page.svelte
apps/kodama-desktop/src/routes/settings/: +page.svelte
apps/kodama-firmware/: Cargo.toml  build.rs
apps/kodama-firmware/src/: camera.rs  main.rs  relay.rs  update.rs
apps/kodama-mobile/: package.json  vite.config.ts
apps/kodama-mobile/src/: app.css  app.d.ts  app.html
apps/kodama-mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/kodama-mobile/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
apps/kodama-mobile/src/routes/: +layout.svelte  +page.svelte
apps/kodama-mobile/src/routes/settings/: +page.svelte
apps/kodama-relay/: Cargo.toml
apps/kodama-relay-cli/: Cargo.toml
apps/kodama-relay/src/: main.rs
apps/kodama-server/: Cargo.toml
apps/kodama-server-cli/: Cargo.toml
apps/kodama-server-cli/src/: main.rs
apps/kodama-server/src/: app.rs  main.rs  ui.rs
apps/yurei-camera/: Cargo.toml
apps/yurei-camera/src/: main.rs
apps/yurei-desktop/: Cargo.toml
apps/yurei-desktop/src/: main.rs
apps/yurei-server-bin/: Cargo.toml
apps/yurei-server-bin/src/: main.rs
crates/kodama/: Cargo.toml
crates/kodama-capture/: Cargo.toml
crates/kodama-capture/src/: abr.rs  h264.rs  lib.rs  telemetry.rs  throughput.rs  video.rs
crates/kodama-core/: Cargo.toml
crates/kodama-core/src/: command.rs  frame.rs  identity.rs  lib.rs  protocol.rs
crates/kodama-relay/: Cargo.toml
crates/kodama-relay/src/: lib.rs
crates/kodama-relay/src/mux/: command.rs  frame.rs  mod.rs  muxer.rs
crates/kodama-relay/src/transport/: connection.rs  endpoint.rs
crates/kodama-server/: Cargo.toml
crates/kodama-server/src/: lib.rs  rate_limit.rs  router.rs  storage.rs
crates/kodama-server/tests/: e2e.rs
crates/kodama-storage/: Cargo.toml
crates/kodama-storage/src/: cloud.rs  lib.rs  local.rs
crates/kodama-transport/: Cargo.toml
crates/kodama-transport/src/: lib.rs
crates/kodama-transport/src/mux/: demuxer.rs  frame.rs  muxer.rs
crates/kodama-transport/src/transport/: connection.rs  endpoint.rs  mod.rs
crates/kodama/src/: command.rs  frame.rs  identity.rs  lib.rs
crates/kodama/src/capture/: abr.rs  audio.rs  h264.rs  mod.rs  telemetry.rs  test_video.h264  video.rs
crates/kodama/src/server/: clients.rs  mod.rs  rate_limit.rs  router.rs  storage.rs
crates/kodama/src/storage/: cloud.rs  local.rs  mod.rs
crates/kodama/src/transport/: connection.rs  endpoint.rs  mod.rs
crates/kodama/src/transport/mux/: command.rs  demuxer.rs  frame.rs  mod.rs  muxer.rs
crates/kodama/src/web/: fmp4.rs  mod.rs  ws.rs
crates/kodama/tests/: e2e.rs
crates/yurei/: Cargo.toml
crates/yurei-capture/: Cargo.toml
crates/yurei-capture/src/: h264.rs  lib.rs  video.rs
crates/yurei-core/: Cargo.toml
crates/yurei-core/src/: frame.rs  lib.rs  protocol.rs
crates/yurei-relay/: Cargo.toml
crates/yurei-relay/src/: lib.rs
crates/yurei-relay/src/mux/: buffer.rs  mod.rs  stream.rs  wire.rs
crates/yurei-relay/src/transport/: endpoint.rs  mod.rs
crates/yurei-server/: Cargo.toml
crates/yurei-server/src/: lib.rs  router.rs
crates/yurei/src/: buffer.rs  capture.rs  lib.rs  transport.rs
docker/: Dockerfile.cross
docs/: architecture.md
docs/architecture/: adr-001-three-module-system.md  gap-analysis.md  poc-1-spec.md
pi/: gpsd.conf  kodama-enable-gps.sh
pi/image/config/: kodama-pi4.yaml  kodama-pi5.yaml  kodama-zero2w.yaml
pi/image/files/: kodama-env.example  motd
pi/image/layer/: kodama.yaml
pi/systemd/: kodama-camera.service  kodama-firmware.service  kodama-gps.service
scripts/: pi-deploy.sh  pi-setup.sh  pi-wifi-toggle.sh  pi.sh  setup.sh  test-e2e.sh
src/: lib.rs  relay.rs  router.rs  stream.rs  wire.rs
src/capture/: audio.rs  mod.rs  telemetry.rs
src/core/: identity.rs  mod.rs
src/relay/: mod.rs
src/relay/mux/: demuxer.rs  frame.rs  muxer.rs
src/relay/transport/: connection.rs  endpoint.rs  mod.rs
src/server/: mod.rs  router.rs  storage.rs
src/storage/: cloud.rs  local.rs  mod.rs
ui/: package.json  tsconfig.json
ui/src/lib/: index.ts
ui/src/lib/components/: AudioMeter.svelte  AudioPlayer.svelte  TelemetryPanel.svelte  VideoPlayer.svelte
ui/src/routes/: +page.svelte
ui/src/routes/settings/: +page.svelte
