[workspace]
resolver = "2"
members = [
    "crates/kodama",
    "apps/kodama-firmware",
    "apps/kodama-server",
    "apps/kodama-app/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/andymitch/kodama"
description = "Privacy-focused P2P security camera system"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Networking
iroh = { git = "https://github.com/n0-computer/iroh", branch = "main" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
bytes = { version = "1", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP / crypto
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10"
hex = "0.4"

# Web
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Utilities
futures-util = "0.3"
rand = "0.9"
async-trait = "0.1"
libc = "0.2"
tokio-util = "0.7"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Testing
tempfile = "3"

# Internal crates
kodama = { path = "crates/kodama" }
