[package]
name = "kodama-camera"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Camera binary for Kodama - runs on Pi Zero 2W"

[features]
default = []
test-source = ["kodama/test-source"]

[dependencies]
kodama.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
iroh.workspace = true
