[package]
name = "kodama-camera"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Camera capture binary for Kodama"

[features]
default = []
test-source = ["kodama-capture/test-source"]

[dependencies]
kodama-core = { workspace = true }
kodama-transport = { workspace = true }
kodama-capture = { workspace = true }
tokio = { workspace = true }
iroh = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
futures-util = { workspace = true }
