[package]
name = "kodama-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lite CLI viewer for Kodama (client-only, no server)"

[dependencies]
kodama-core = { workspace = true }
kodama-relay = { workspace = true }
kodama-capture = { workspace = true }  # For decode_telemetry
tokio = { workspace = true }
iroh = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
