[package]
name = "kodama-firmware"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Kodama firmware binary (camera or relay mode)"

[features]
default = []
test-source = ["kodama/test-source"]

[dependencies]
kodama = { workspace = true, features = ["transport", "capture"] }
tokio = { workspace = true }
iroh = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
futures-util = { workspace = true }
