[package]
name = "kodama-relay-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lightweight standalone relay for Kodama"

[[bin]]
name = "kodama-relay"
path = "src/main.rs"

[dependencies]
kodama-core = { workspace = true }
kodama-relay = { workspace = true }
iroh = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
