[package]
name = "kodama-relay-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Standalone relay server for Kodama"

[[bin]]
name = "kodama-relay"
path = "src/main.rs"

[dependencies]
kodama-core = { workspace = true }
kodama-relay = { workspace = true }
iroh = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
