[package]
name = "kodama-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Standalone relay server for Kodama"

[dependencies]
kodama-core = { workspace = true }
kodama-transport = { workspace = true }
iroh = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
