[package]
name = "kodama-server-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Headless server binary for Kodama"

[[bin]]
name = "kodama-server"
path = "src/main.rs"

[dependencies]
kodama-core = { workspace = true }
kodama-server = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
