[package]
name = "kodama-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Headless server binary for Kodama"

[dependencies]
kodama.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
iroh.workspace = true
