[package]
name = "kodama-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Kodama headless server with web UI"

[[bin]]
name = "kodama-server"
path = "src/main.rs"

[dependencies]
kodama = { workspace = true, features = ["web"] }
iroh = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
