[package]
name = "yurei-server-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Headless server binary for Yurei"

[dependencies]
yurei-core.workspace = true
yurei-relay.workspace = true
yurei-server.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
iroh.workspace = true
