[package]
name = "kodama-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Video, audio, and telemetry capture for Kodama"

[features]
default = []
test-source = []

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
