[package]
name = "kodama-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and protocol definitions for Kodama"

[dependencies]
bytes = { workspace = true }
serde = { workspace = true }
iroh = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
