[package]
name = "kodama-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "P2P transport and frame multiplexing for Kodama"

[dependencies]
kodama-core = { workspace = true }
tokio = { workspace = true }
iroh = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
