[package]
name = "yurei-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Video, audio, and telemetry capture for Yurei cameras"

[dependencies]
yurei-core.workspace = true
bytes.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true

[features]
default = []
# Enable test video source for development without real camera
test-source = []
