[package]
name = "yurei"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Privacy-focused P2P security camera system"

[features]
default = []
test-source = []

[dependencies]
# Async runtime
tokio = { workspace = true }

# P2P networking
iroh = { workspace = true }

# Serialization
serde = { workspace = true }
bytes = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Random
rand = { workspace = true }
