[package]
name = "kodama-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/andymitch/kodama"
description = "Desktop app for Kodama - privacy-focused P2P security camera system"

[lib]
name = "kodama_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Kodama crates
kodama-core = { path = "../../../crates/kodama-core" }
kodama-relay = { path = "../../../crates/kodama-relay" }
kodama-server = { path = "../../../crates/kodama-server" }
kodama-storage = { path = "../../../crates/kodama-storage" }
kodama-capture = { path = "../../../crates/kodama-capture" }

# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Iroh for key handling
iroh = { git = "https://github.com/n0-computer/iroh", branch = "main" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
