[package]
name = "kodama-mobile"
version = "0.1.0"
edition = "2021"
description = "Kodama mobile app - camera viewer and server"
license = "MIT"

[lib]
name = "kodama_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "kodama-mobile"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

# Kodama crates
kodama-core = { path = "../../../crates/kodama-core" }
kodama-relay = { path = "../../../crates/kodama-relay" }
kodama-server = { path = "../../../crates/kodama-server" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
